# homeassistant-addon-viessmann-gridbox

./: .bumpversion-dev.toml  .bumpversion-edge.toml  .bumpversion-exp.toml  .bumpversion-stable.toml  .bumpversion.toml  .devcontainer.json  .gitignore  README.md  bumpversion-edge.sh  bumpversion-stable.sh  bumpversion.sh  bumpvesion-dev.sh  copy_to_dev.sh  copy_to_release.sh  docker-compose.yaml  pyproject.toml  repository.yaml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: builder.yaml  bumpVersion.yaml  codeql.yml  lint.yaml  release_dev.yaml  release_edge.yaml  release_single.yaml  release_stable.yaml  release_standalone.yaml
GridboxConnectorAddon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  cloudSettings.json  config.yaml  run.sh
GridboxConnectorAddon-dev/: CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.standalone  README.md  apparmor.txt  build.yaml  cloudSettings.json  config.yaml
GridboxConnectorAddon-dev/GridboxConnector/: Battery.py  __main__.py  ha_viessmann_battery.py  ha_viessmann_ev_charging_station.py  ha_viessmann_gridbox_connector.py  ha_viessmann_heater.py  main_test.py  requirements.txt  setup.ini  utils.py
GridboxConnectorAddon-dev/translations/: de.yaml
GridboxConnectorAddon-edge/: CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.standalone  apparmor.txt  build.yaml  cloudSettings.json  config.yaml
GridboxConnectorAddon-experimental/: Dockerfile  apparmor.txt  build.yaml  cloudSettings.json  config.yaml
GridboxConnectorAddon/translations/: en.yaml
(+58 files in other folders)
